# KSelect

./: .gitignore  README.md  SPEC-01-architecture.md  SPEC-02-models-config.md  SPEC-03-backends-ingestion.md  SPEC-04-index-retrieval-ranking.md  SPEC-05-core-class-infra.md  main.py  main2.py  pyproject.toml
UI_Test/: README.md
UI_Test/backend/: api.py  requirements.txt
UI_Test/eval/: metrics.py
UI_Test/frontend/: index.html  package-lock.json  package.json  vite.config.js
UI_Test/frontend/src/: App.jsx  index.css
UI_Test/frontend/src/components/: ChatWindow.jsx  DropZone.jsx  EvalPanel.jsx  IndexStats.jsx  MetaBadges.jsx
benchmarks/: compare_kselect_langchain.py
kselect/: __init__.py  exceptions.py  kselect.py  multi_tenant.py
kselect/backends/: base.py  chromadb.py  factory.py  local.py  pgvector.py  pinecone.py
kselect/cache/: semantic_cache.py
kselect/context/: assembler.py
kselect/index/: bm25_index.py  faiss_index.py  manager.py
kselect/ingestion/: chunking.py  loaders.py  pipeline.py
kselect/llm/: anthropic_client.py  base.py  openai_client.py
kselect/models/: __init__.py  answer.py  cache.py  chunk.py  config.py  hit.py  trace.py
kselect/observability/: logging.py  metrics.py
kselect/ranking/: colbert.py  cross_encoder.py  mmr.py
kselect/retrieval/: engine.py  fusion.py  query_router.py
tests/integration/: test_kselect.py  test_search.py
tests/unit/: test_cache.py  test_config.py  test_context.py  test_fusion.py  test_index.py  test_ingestion.py
